# Browser-Automation-Launcher

./: .env.dev.terraform  .env.global  .env.prod.terraform  .env.staging.terraform  .env.terraform  .gitignore  DEPLOYMENT_README.md  DEPLOYMENT_SETUP.md  PROJECT_ANALYSIS.md  PROJECT_ANALYSIS_COMPREHENSIVE.md  README.md  _run_ansible.sh  _run_terraform_create.sh  _run_terraform_destroy.sh  deploy.sh  instance_readiness_checker.sh  pyproject.toml  test_port_binding.py
.github/workflows/: STAGING_ANALYSIS.md  ansible.yml  code_pull.yml  deploy.sh  deploy.yml  deploy_staging.yaml  destroy.yml  destroy_Iac.yml  github_flow.yml  staging.yml  staging.yml.fixed  test.yml
Iac/: README.md
Iac/ansible/: .env.ansible  ansible.cfg  playbook.yml
Iac/terraform/: .env.dev.terraform  (+8 more)
guides/: AMI_launch_steps.md  COMMANDS.md  README.md  vm-testing-guide.md
local_test/: create_test_requests.bat  create_test_requests.ps1  create_test_requests.sh  test_browser_activity.py  test_request.example.json
scripts/: CHROME_GUI_FIX_GUIDE.md  MIGRATION_TO_SERVICE.md  PRODUCTION_RESILIENCE_SOLUTION.md  SSM_QUICK_CHECK.md  SSM_TROUBLESHOOTING.md  auto_login_script.ps1  chrome_session1_launcher.ps1  cleanup_expired_session.bat  cleanup_old_profiles.bat  cleanup_port.bat  cleanup_profile.bat  custom_launcher_script.cmd  install_SSM_Agent.ps1  install_service.ps1  launch_chrome_port_interactive.cmd  manual_autologon_setup.ps1  prepare_for_ami.ps1  setup_login.ps1  setup_startup_task.bat  simple_startup.ps1  ssm_diagnostic_commands.ps1  taskkill_process.bat  verify_chrome_gui.ps1
src/: main.py
(+22 files in other folders)
